# tpo-projekt

./: .gitignore  README.md  ok.yml
backend/: alembic.ini  config.py  database.py  entities.py  main.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/api/dependencies/: core.py
backend/api/routers/: groups.py
backend/services/: group.py
backend/static/js/groups/: main.js
backend/static/js/groups/modules/: someModule.js
backend/static/js/main/: main.js
backend/static/js/main/modules/: println.js
backend/templates/: base.html  index.html
backend/templates/groups/: index.html
